--- a/src/Sheboygan/project.json
+++ b/src/Sheboygan/project.json
@@ -8,6 +8,7 @@
         "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
         "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
         "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-rc1-final",
         "System.Runtime.InteropServices.RuntimeInformation": "4.0.0-beta-23516"
     },
 
