Port over DWF plot sample

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /artifacts
 /src/Sheboygan/Sheboygan.xproj.user
 /.vs
+/src/Sheboygan/wwwroot/lib/openlayers3-dist
+/src/Sheboygan/wwwroot/lib/bootstrap
+/src/Sheboygan/wwwroot/lib/font-awesome
+/src/Sheboygan/wwwroot/lib/jquery
