--- a/src/MvcCoreSample/MvcCoreSample.csproj
+++ b/src/MvcCoreSample/MvcCoreSample.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MapGuideDotNetApi" Version="3.1.1.9378-pre74" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
