Restore rewrite rule for mapguide-react-layout static assets

--- a/src/MvcCoreSample/MvcCoreSample.csproj
+++ b/src/MvcCoreSample/MvcCoreSample.csproj
@@ -5,6 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="OSGeo.MapGuide.Foundation" Version="4.0.0.10004" />
+	<PackageReference Include="OSGeo.MapGuide.Geometry" Version="4.0.0.10004" />
+	<PackageReference Include="OSGeo.MapGuide.PlatformBase" Version="4.0.0.10004" />
 	<PackageReference Include="OSGeo.MapGuide.MapGuideCommon" Version="4.0.0.10004" />
     <PackageReference Include="OSGeo.MapGuide.Web" Version="4.0.0.10004" />
   </ItemGroup>
