--- a/src/MvcCoreSample/MvcCoreSample.csproj
+++ b/src/MvcCoreSample/MvcCoreSample.csproj
@@ -1,15 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-	<PackageReference Include="OSGeo.MapGuide.Foundation" Version="4.0.0.10170" />
-	<PackageReference Include="OSGeo.MapGuide.Geometry" Version="4.0.0.10170" />
-	<PackageReference Include="OSGeo.MapGuide.PlatformBase" Version="4.0.0.10170" />
-	<PackageReference Include="OSGeo.MapGuide.MapGuideCommon" Version="4.0.0.10170" />
-    <PackageReference Include="OSGeo.MapGuide.Web" Version="4.0.0.10170" />
+	<PackageReference Include="OSGeo.MapGuide.Foundation" Version="4.0.0.10177" />
+	<PackageReference Include="OSGeo.MapGuide.Geometry" Version="4.0.0.10177" />
+	<PackageReference Include="OSGeo.MapGuide.PlatformBase" Version="4.0.0.10177" />
+	<PackageReference Include="OSGeo.MapGuide.MapGuideCommon" Version="4.0.0.10177" />
+    <PackageReference Include="OSGeo.MapGuide.Web" Version="4.0.0.10177" />
   </ItemGroup>
   
   <ItemGroup>
